# serenelib

./: Cargo.toml  README.md
src/: allocator.rs  auxv.rs  debug_writer.rs  entry.rs  ipc.rs  lib.rs  syscalls.rs
