[package]
name = "serenelib"
version = "0.1.0"
edition = "2024"

[dependencies]
spin = "0.5.2"
x86_64 = "0.14.2"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
bitflags = { version = "2.10.0", features = [] }

[profile.dev]
panic = "abort"
codegen-units = 1
lto = false
incremental = false

[profile.release]
panic = "abort"
codegen-units = 1
lto = false
strip = false
